--- a/#14/index.html
+++ b/#14/index.html
@@ -46,6 +46,7 @@
             </li> 
             <li class="nav-item">
               <a class="nav-link active" aria-current="page" href="login.html">Iniciar Sesión <i class="fa-solid fa-right-to-bracket"></i></a>             
+
             </li>                 
           </ul>
         </div>
@@ -57,7 +58,7 @@
     <div class="contenedor">       
       <img src="/img/Hotels Business Website (1).png" class="img-fluid" alt="...">
     </div>   
-    <audio src="/Hotel Lobby Music.mp3" controls autoplay></audio> 
+   <!--  <audio src="/Hotel Lobby Music.mp3" controls autoplay></audio>  -->
   </main>
   <footer>
     <p>Curso Lenguaje de Programación Javascript 2024</p>
