--- a/#14/login.html
+++ b/#14/login.html
@@ -65,7 +65,7 @@
       <p>No tienes una cuenta? <a href="signup.html">Registro</a></p>
   </section>
   <script src="js/login.js"></script>
-  <audio src="/Hotel Lobby Music.mp3" controls autoplay></audio> 
+  <!-- <audio src="/Hotel Lobby Music.mp3" controls autoplay></audio>  -->
   </main>
   <footer>
     <p>Curso Lenguaje de Programación Javascript 2024</p>
